--- a/quiz2/biology_2.html
+++ b/quiz2/biology_2.html
@@ -25,9 +25,9 @@
 <div class="container grey_background"><!-- yes -->
    <div class="row-fluid margin_left_30">
 
-            <div class="col-md-10 col-md-offset-2"><img src="../images/title.png" alt="title e-learning episodes"> </div>
+            <div class="col-md-12"><img src="../images/title.png" alt="title e-learning episodes"> </div>
 
-                      <ul class="nav nav-tabs col-md-offset-4" role="tablist">
+                      <ul class="nav nav-tabs col-md-offset-4 margin_right_430" role="tablist">
                          <li class="font_nav_bar_quiz margin_left_35"><a href="../quiz1/space_1.html">&nbsp;Quiz 1&nbsp;</a></li>
                          <li class="active font_nav_bar_quiz"><a href="space_2.html">&nbsp;Quiz 2&nbsp;</a></li>
                          <li class="font_nav_bar_quiz"><a href="../quiz3/space_3.html">&nbsp;Quiz 3&nbsp;</a></li>
@@ -131,20 +131,21 @@
 
                   <div id="drag_empty2"></div> 
 
+                    <div id="drag_species4" class="horseshoe_crab"> 
+                    <a href="#" onclick="toggle_visibility('horseshoe_crab_text');"> <img src="../images/horseshoe_crab.jpg" alt="horseshoe_crab"></a></div> 
+
                   <div id="drag_species2" class="sponge"> 
                   <a href="#" onclick="toggle_visibility('sponge_text');"> <img src="../images/sponge.jpg" alt="sponge"></a></div> 
 
                   <div id="drag_species3" class="jellyfish"> 
                     <a href="#" onclick="toggle_visibility('jellyfish_text');"><img src="../images/jellyfish.jpg" alt="jellyfish"></a></div> 
 
-                  <div id="drag_species4" class="horseshoe_crab"> 
-                    <a href="#" onclick="toggle_visibility('horseshoe_crab_text');"> <img src="../images/horseshoe_crab.jpg" alt="horseshoe_crab"></a></div> 
-                  
+                    <div id="drag_species8" class="horseshoe_shrimp"> 
+                    <a href="#" onclick="toggle_visibility('horseshoe_shrimp_text');"><img src="../images/horseshoe_shrimp.jpg" alt="horseshoe_shrimp"></a></div> 
+
                   <div id="drag_species5" class="coelacanth"> 
                     <a href="#" onclick="toggle_visibility('coelacanth_text');"> <img src="../images/coelacanth.jpg" alt="coelacanth"></a></div> 
 
-                  <div id="drag_species6" class="gingko_biloba"> 
-                   <a href="#" onclick="toggle_visibility('gingko_biloba_text');"> <img src="../images/gingko_biloba.jpg" alt="gingko_biloba"></a></div> 
 
                   <div id="drag_species7" class="nautilus"> 
                     <a href="#" onclick="toggle_visibility('nautilus_text');"><img src="../images/nautilus.jpg" alt="nautilus"></a></div> 
@@ -152,8 +153,10 @@
                   <div id="drag_empty6"></div> 
                   <div id="drag_empty7"></div> 
 
-                  <div id="drag_species8" class="horseshoe_shrimp"> 
-                    <a href="#" onclick="toggle_visibility('horseshoe_shrimp_text');"><img src="../images/horseshoe_shrimp.jpg" alt="horseshoe_shrimp"></a></div> 
+                        <div id="drag_species6" class="gingko_biloba"> 
+                   <a href="#" onclick="toggle_visibility('gingko_biloba_text');"> <img src="../images/gingko_biloba.jpg" alt="gingko_biloba"></a></div> 
+
+                  
                   <div id="drag_empty8"></div> 
 
                </div>
