--- a/quiz3/biology_3.html
+++ b/quiz3/biology_3.html
@@ -29,9 +29,9 @@
             <div class="col-md-12"><img src="../images/title.png" alt="title e-learning episodes"> </div>
 
                       <ul class="nav nav-tabs col-md-offset-4 margin_right_430" role="tablist">
-                         <li class="font_nav_bar_quiz margin_left_35"><a href="../quiz1/space_1.html">&nbsp;Quiz 1&nbsp;</a></li>
-                          <li class="font_nav_bar_quiz"><a href="../quiz2/space_2.html">&nbsp;Quiz 2&nbsp;</a></li>
-                         <li class="active font_nav_bar_quiz"><a href="space_3.html">&nbsp;Quiz 3&nbsp;</a></li>
+                           <li class="active font_nav_bar_quiz margin_left_35"><a href="../index.php">&nbsp;Quiz 1&nbsp;</a></li>
+                         <li class="font_nav_bar_quiz"><a href="../space_2.php">&nbsp;Quiz 2&nbsp;</a></li>
+                         <li class="font_nav_bar_quiz"><a href="../space_3.php">&nbsp;Quiz 3&nbsp;</a></li>
                      </ul>
               
             </div> <!-- row-fluid -->
@@ -42,10 +42,10 @@
 
                 <div class="col-md-3"><button type="submit" id="forum_btn" class="btn btn-primary margin_top_button button_css">Class Forum</button></div>
                     <ul class="nav nav-tabs" role="tablist">
-                          <li class="font_nav_bar_subj margin_left_30"><a href="space_3.html">&nbsp;Space&nbsp;</a></li>
-                          <li class="font_nav_bar_subj"><a href="countries_3.html">&nbsp;Countries&nbsp;</a></li>
-                          <li class="font_nav_bar_subj"><a href="cities_3.html">&nbsp;Cities&nbsp;</a></li>
-                          <li class="active font_nav_bar_subj"><a href="biology_3.html">&nbsp;Biology&nbsp;</a></li>
+                          <li class="font_nav_bar_subj margin_left_30"><a href="../space_3.php">&nbsp;Space&nbsp;</a></li>
+                          <li class="font_nav_bar_subj"><a href="../countries_3.php">&nbsp;Countries&nbsp;</a></li>
+                          <li class="font_nav_bar_subj"><a href="../cities_3.php">&nbsp;Cities&nbsp;</a></li>
+                          <li class="active font_nav_bar_subj"><a href="../biology_3.php">&nbsp;Biology&nbsp;</a></li>
                     </ul>
 
 <div id="forum"> 
