--- a/quiz2/biology_2.html
+++ b/quiz2/biology_2.html
@@ -28,8 +28,8 @@
             <div class="col-md-12"><img src="../images/title.png" alt="title e-learning episodes"> </div>
 
                       <ul class="nav nav-tabs col-md-offset-4 margin_right_430" role="tablist">
-                         <li class="active font_nav_bar_quiz margin_left_35"><a href="../index.php">&nbsp;Quiz 1&nbsp;</a></li>
-                         <li class="font_nav_bar_quiz"><a href="../space_2.php">&nbsp;Quiz 2&nbsp;</a></li>
+                         <li class="font_nav_bar_quiz margin_left_35"><a href="../index.php">&nbsp;Quiz 1&nbsp;</a></li>
+                         <li class="active font_nav_bar_quiz"><a href="../space_2.php">&nbsp;Quiz 2&nbsp;</a></li>
                          <li class="font_nav_bar_quiz"><a href="../space_3.php">&nbsp;Quiz 3&nbsp;</a></li>
                      </ul>
               
