--- a/quiz3/biology_3.html
+++ b/quiz3/biology_3.html
@@ -136,55 +136,29 @@
  
         <div class="col-md-4"><!--yes-->
           <div id="audio" ng-controller="Ctrl"> <!--yes-->
-
+            <p class="Arial_Rd_Grey_25">Listen to related podcasts </br>for further study</p>
+            <p class="font_planet_para_bold">First we have a dicussion on</p>
              <div class="margin_bottom_audio">
                      <audio controls>
                         <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
                         <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
                       </audio>  
               </div><!-- details1.show -->
+              <p class="font_planet_para_bold">Here is a quick talk about..</p>
                <div class="margin_bottom_audio">
                      <audio controls>
                         <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
                         <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
                       </audio>
               </div><!-- details1.show -->
+              <p class="font_planet_para_bold">Finally we hear about...</p>
                 <div class="margin_bottom_audio">
                      <audio controls>
                         <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
                         <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
                       </audio>
               </div><!-- details1.show -->
-               <div class="margin_bottom_audio">
-                     <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
-                      </audio>
-              </div><!-- details1.show -->
-                <div class="margin_bottom_audio">
-                     <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
-                      </audio>
-              </div><!-- details1.show -->
-                <div class="margin_bottom_audio">
-                     <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
-                      </audio>
-              </div><!-- details1.show -->
-                <div class="margin_bottom_audio">
-                     <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
-                      </audio>
-              </div><!-- details1.show -->
-                <div class="margin_bottom_audio">
-                     <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
-                      </audio>
-              </div><!-- details1.show -->
+               
              
             </div><!--audio-->
           </div><!--col-md-2-->
