--- a/quiz3/biology_3.html
+++ b/quiz3/biology_3.html
@@ -136,26 +136,26 @@
  
         <div class="col-md-4"><!--yes-->
           <div id="audio" ng-controller="Ctrl"> <!--yes-->
-            <p class="Arial_Rd_Grey_25">Listen to related podcasts </br>for further study</p>
-            <p class="font_planet_para_bold">First we have a dicussion on</p>
+            <p class="Arial_Rd_Grey_25">Listen to related 1 minute </br>podcasts for further study</p>
+            <p class="font_planet_para_bold">How Darwin honed in on evolution</p>
              <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=EEB25D5A-6486-46E9-B60E361AC9EA41AE" type="audio/mpeg">
+                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=EEB25D5A-6486-46E9-B60E361AC9EA41AE">
                       </audio>  
               </div><!-- details1.show -->
-              <p class="font_planet_para_bold">Here is a quick talk about..</p>
+              <p class="font_planet_para_bold">How high nutrient levels are affecting species</p>
                <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=DC5F1740-BC62-40CA-B89FA1304C5E4C99" type="audio/mpeg">
+                        <embed height="50" width="" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=DC5F1740-BC62-40CA-B89FA1304C5E4C99">
                       </audio>
               </div><!-- details1.show -->
-              <p class="font_planet_para_bold">Finally we hear about...</p>
+              <p class="font_planet_para_bold">Were dinosaurs on the way out before the meteor?</p>
                 <div class="margin_bottom_audio">
                      <audio controls>
-                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56" type="audio/mpeg">
-                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=F6CCD950-75C1-4C26-A06B48B4DDCEDA56">
+                        <source src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=B788E1BE-0169-49BF-BD1B2E64BC66EF01" type="audio/mpeg">
+                        <embed height="50" width="100" src="http://www.scientificamerican.com/podcast/podcast.mp3?fileId=B788E1BE-0169-49BF-BD1B2E64BC66EF01">
                       </audio>
               </div><!-- details1.show -->
                
