--- a/quiz2/biology_2.html
+++ b/quiz2/biology_2.html
@@ -11,6 +11,7 @@
     <link type="text/css" rel="stylesheet" href="../css/drag_drop.css" />
     <link type="text/css" rel="stylesheet" href="../css/note_species.css" />
     <link type="text/css" rel="stylesheet" href="../css/note_bw.css" />
+        <link type="text/css" rel="stylesheet" href="../css/sticker.css" />
     <link type="text/css" rel="stylesheet" href="../css/bootstrap.css" />
     <link type="text/css" rel="stylesheet" href="../css/adaptive-modal.css" />
     <link type="text/css" rel="stylesheet" href="../css/jquery-ui.structure.min.css" />
@@ -134,9 +135,11 @@
 
                <div id="dragzone_species" class="col-md-8 dragzone_species" style="margin-right:-15px;">
 
-                 <div id="welldone_species" class="col-md-6">
-                  <span class="species_facts">Well Done!</span><br /><br />
-                  <span class="font_species_name">The oldest living things in years:</span><br />
+                 <div id="welldone_species" class="col-md-8">
+                  <div class="sticker stickerOne example-1 margin_top_button" ></div>
+                  <!--<span class="solar_facts">Well Done!</span><br /><br />-->
+                  <div class="col-md-8">
+                  <span class="species_facts">The oldest living things in years:</span><br />
                   <span class="font_species_name"> Cyanobacteria</span> <span class="font_species_para">3.5 Billion years </span><br />
                   <span class="font_species_name"> Sponge</span> <span class="font_species_para">580 Million years </span><br />
                   <span class="font_species_name"> Jellyfish</span> <span class="font_species_para">505 Million years </span><br />
@@ -145,6 +148,7 @@
                   <span class="font_species_name"> Gingko Biloba</span> <span class="font_species_para">270 Million years </span><br />
                   <span class="font_species_name"> Nautilus</span> <span class="font_species_para">235 Million years </span><br />
                   <span class="font_species_name"> Horseshoe Shrimp</span> <span class="font_species_para">200 Million years </span>
+                 </div>
                 </div>
 
                   <div id="drag_empty1"></div> 
@@ -210,6 +214,7 @@
 <script type="text/javascript" src="../js/hide_notepad.js"></script>
 <script type="text/javascript" src="../js/toggle_css.js"></script>
 <script type="text/javascript" src="../js/toggle_sound.js"></script>
+<script type="text/javascript" src="../js/sticker.min.js"></script>
 
 
 
