--- a/quiz2/biology_2.html
+++ b/quiz2/biology_2.html
@@ -281,7 +281,7 @@
                
               </div>
               <div class="tc_back">
-                <p class="flipcard_text">When the weather is dry the water pools in which they live dry up and the adults die. However, the eggs can survive in the sand even through periods of extreme dryness – and for up to 20 years.</p>
+                <p class="flipcard_text">When the water pools in which they live dry up and the adults die, the eggs can survive in the sand even through periods of extreme dryness – and for up to 20 years.</p>
               </div>
             </div>
           </li>
